force-app/main/default/objects/Case/fields/WD_Customer_Environment_Details__c.field-meta.xml
<CustomField>
    <fullName>WD_Customer_Environment_Details__c</fullName>
    <description>Provides a space to capture detailed information about the customer&apos;s operating environment relevant to the case, such as OS, network configuration, connected peripherals, or other integrated systems.&quot;</description>
    <inlineHelpText>Describe the customer&apos;s operating environment (e.g., OS version, network setup, integrations, specific configurations) that might be relevant to this case.</inlineHelpText>
    <label>WD Customer Environment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>