force-app/main/default/objects/Case/fields/WD_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>WD_Error_Code__c</fullName>
    <description>Stores any specific error codes or messages displayed to the customer or found in logs, aiding in rapid diagnosis.</description>
    <inlineHelpText>Enter any error codes displayed to the customer or found in system logs related to this issue.</inlineHelpText>
    <label>WD Error Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>