force-app/main/default/objects/Case/fields/WD_Initial_Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>WD_Initial_Support_Tier__c</fullName>
    <description>Indicates the initial support tier assessed or assigned when the case is logged. Helps in tracking case flow and escalation paths.</description>
    <inlineHelpText>Select the initial support team or tier handling or assessing this case.</inlineHelpText>
    <label>WD Initial Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GCC (General Customer Care)</fullName>
            </value>
            <value>
                <fullName>GTAC (Global Technical Assistance)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>