force-app/main/default/objects/Case/fields/WD_Primary_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>WD_Primary_Knowledge_Article__c</fullName>
    <description>Direct link to the primary Salesforce Knowledge Article that was most helpful in resolving this case or was provided to the customer.</description>
    <inlineHelpText>Paste the URL of the most relevant Knowledge Article used for this case.</inlineHelpText>
    <label>WD Primary Knowledge Article</label>
    <type>Url</type>
</CustomField>