force-app/main/default/objects/Case/fields/WD_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>WD_Product_Line__c</fullName>
    <description>Stores the primary Winchester Dynamics product line category associated with the case. Critical for routing, reporting, and entitlement determination</description>
    <inlineHelpText>Select the main Winchester Dynamics product division this case relates to (e.g., Building Technologies, Aerospace)</inlineHelpText>
    <label>WD Product Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Technologies</fullName>
            </value>
            <value>
                <fullName>Safety &amp; Productivity Solutions (SPS)</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Process Solutions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>