force-app/main/default/objects/Case/fields/WD_Reported_Component__c.field-meta.xml
<CustomField>
    <fullName>WD_Reported_Component__c</fullName>
    <description>Identifies the specific sub-component, module, or feature within the product that is reportedly experiencing the issue</description>
    <inlineHelpText>If applicable, specify the particular component or software module related to the issue (e.g., &apos;Navigation System&apos;, &apos;Sensor Array B&apos;, &apos;User Authentication Module&apos;)</inlineHelpText>
    <label>WD Reported Component/Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>