force-app/main/default/objects/Case/fields/WD_Resolution_Details__c.field-meta.xml
<CustomField>
    <fullName>WD_Resolution_Details__c</fullName>
    <description>A comprehensive description of the steps taken to resolve the case, including root cause analysis (if applicable) and preventative measures suggested. Required for case closure.</description>
    <inlineHelpText>Provide a detailed summary of how this case was resolved, including troubleshooting steps, solutions applied, and any recommendations given to the customer.</inlineHelpText>
    <label>WD Resolution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>