force-app/main/default/objects/Case/fields/WD_Selected_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>WD_Selected_Product_Name__c</fullName>
    <description>Displays the Product Name from the selected WD Product Portfolio record. Read-only.</description>
    <formula>WD_Specific_Product__r.WD_Product_Name__c</formula>
    <inlineHelpText>This is the name of the product selected in the &apos;WD Specific Product/SKU&apos; field</inlineHelpText>
    <label>WD Selected Product Name</label>
    <type>Text</type>
</CustomField>