force-app/main/default/objects/Case/fields/WD_Specific_Product__c.field-meta.xml
<CustomField>
    <fullName>WD_Specific_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Specific Product</label>
    <referenceTo>WD_Product_Portfolio__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>