force-app/main/default/objects/Case/fields/WD_Specific_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>WD_Specific_Product_SKU__c</fullName>
    <description>Captures the specific product model number, Stock Keeping Unit (SKU), or software version identifier if provided by the customer or identified by support. Aids in precise troubleshooting and knowledge retrieval.</description>
    <inlineHelpText>Enter the specific product model number, SKU, or software version if known (e.g., AeroMax 5000, SPS-Scanner-X1, BT-Controller-V2.1)</inlineHelpText>
    <label>WD Specific Product/SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>