force-app/main/default/objects/Case/recordTypes/WD_Product_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>WD_Product_Inquiry</fullName>
    <active>true</active>
    <businessProcess>WD Product Inquiry Process</businessProcess>
    <description>For general questions about Winchester Dynamics products/services, feature requests, or non-technical information requests.</description>
    <label>WD Product Inquiry</label>
</RecordType>