force-app/main/default/objects/Case/recordTypes/WD_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>WD_Service_Request</fullName>
    <active>true</active>
    <businessProcess>WD Service Request Process</businessProcess>
    <description>For formal requests for services such as installations, planned maintenance, on-site assistance, or consultations.</description>
    <label>WD Service Request</label>
</RecordType>