force-app/main/default/objects/Case/recordTypes/WD_Technical_Issue_Aerospace.recordType-meta.xml
<RecordType>
    <fullName>WD_Technical_Issue_Aerospace</fullName>
    <active>true</active>
    <businessProcess>WD Technical Issue Standard Process</businessProcess>
    <description>For troubleshooting and resolving technical problems related to Winchester Dynamics&apos; Aerospace product line.</description>
    <label>WD Technical Issue - Aerospace</label>
</RecordType>