force-app/main/default/objects/Case/recordTypes/WD_Technical_Issue_Building_Tech.recordType-meta.xml
<RecordType>
    <fullName>WD_Technical_Issue_Building_Tech</fullName>
    <active>true</active>
    <businessProcess>WD Technical Issue Standard Process</businessProcess>
    <description>For troubleshooting and resolving technical problems related to Winchester Dynamics&apos; Building Technologies product line</description>
    <label>WD Technical Issue - Building Tech</label>
</RecordType>