force-app/main/default/objects/Case/recordTypes/WD_Technical_Issue_Process_Solutions.recordType-meta.xml
<RecordType>
    <fullName>WD_Technical_Issue_Process_Solutions</fullName>
    <active>true</active>
    <businessProcess>WD Technical Issue Standard Process</businessProcess>
    <description>For troubleshooting and resolving technical problems related to Winchester Dynamics&apos; Process Solutions product line.</description>
    <label>WD Technical Issue - Process Solutions</label>
</RecordType>