force-app/main/default/objects/Case/recordTypes/WD_Technical_Issue_SPS.recordType-meta.xml
<RecordType>
    <fullName>WD_Technical_Issue_SPS</fullName>
    <active>true</active>
    <businessProcess>WD Technical Issue Standard Process</businessProcess>
    <description>For troubleshooting and resolving technical problems related to Winchester Dynamics&apos; Safety &amp; Productivity Solutions product line.</description>
    <label>WD Technical Issue - SPS</label>
</RecordType>