force-app/main/default/objects/Case/listViews/WD_Engineering_Defect_Review_Case.listView-meta.xml
<ListView>
    <fullName>WD_Engineering_Defect_Review_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD Engineering Defect Review</label>
    <queue>WD_Engineering_Defect_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>