force-app/main/default/objects/Case/listViews/WD_Escalated_Issues_Management_Review_Case.listView-meta.xml
<ListView>
    <fullName>WD_Escalated_Issues_Management_Review_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD Escalated Issues - Management Review</label>
    <queue>WD_Escalated_Issues_Management_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>