force-app/main/default/objects/Case/listViews/WD_GCC_General_Inquiries_Case.listView-meta.xml
<ListView>
    <fullName>WD_GCC_General_Inquiries_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD GCC - General Inquiries</label>
    <queue>WD_GCC_General_Inquiries</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>