force-app/main/default/objects/Case/listViews/WD_GTAC_Aero_Avionics_Core_Case.listView-meta.xml
<ListView>
    <fullName>WD_GTAC_Aero_Avionics_Core_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD GTAC - Aero - Avionics Core</label>
    <queue>WD_GTAC_Aero_Avionics_Core</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>