force-app/main/default/objects/Case/listViews/WD_GTAC_Aero_Navigation_Case.listView-meta.xml
<ListView>
    <fullName>WD_GTAC_Aero_Navigation_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD GTAC - Aero - Navigation</label>
    <queue>WD_GTAC_Aero_Navigation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>