force-app/main/default/objects/Case/listViews/WD_GTAC_BuildingTech_Smart_HVAC_Case.listView-meta.xml
<ListView>
    <fullName>WD_GTAC_BuildingTech_Smart_HVAC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD GTAC - BuildingTech - Smart HVAC</label>
    <queue>WD_GTAC_BuildingTech_Smart_HVAC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>