force-app/main/default/objects/Case/listViews/WD_GTAC_SPS_Tier_1_Case.listView-meta.xml
<ListView>
    <fullName>WD_GTAC_SPS_Tier_1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD GTAC - SPS - Tier 1</label>
    <queue>WD_GTAC_SPS_Tier_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>