force-app/main/default/objects/Case/listViews/WD_GTAC_SPS_Warehouse_Automation_Case.listView-meta.xml
<ListView>
    <fullName>WD_GTAC_SPS_Warehouse_Automation_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WD GTAC - SPS - Warehouse Automation</label>
    <queue>WD_GTAC_SPS_Warehouse_Automation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>